2007-05-17  Jb Evain  <jb@nurv.fr>

	* Tests/Mono.Linker.Tests/XmlLinkingTestFixture.cs
	  Tests/Mono.Linker.Tests/AbstractLinkingTestFixture.cs
	  Tests/TestCases/Linker/PreserveFieldsRequired
	  Tests/TestCases/Linker/PreserveFieldsRequired/Library.cs
	  Tests/TestCases/Linker/PreserveFieldsRequired/desc.xml
	  Tests/TestCases/Linker/PreserveFieldsRequired/Makefile
	  Tests/TestCases/Linker/PreserveFieldsRequired/Library.dll:
		Add a new (failing for now) test case for preserve and required.

2007-05-16  Jb Evain  <jb@nurv.fr>

	* Tests/Mono.Linker.Tests/AbstractTestFixture.cs
	  Mono.Linker.csproj
	  Mono.Linker/CoreAction.cs
	  Mono.Linker/Driver.cs
	  Mono.Linker/LinkContext.cs:
		Simplify the command line options.

	* Tests/Mono.Linker.Tests/AbstractTestFixture.cs
	  Mono.Linker.csproj
	  Mono.Linker/CleanStep.cs
	  Mono.Linker/ResolveFromXmlStep.cs
	  Mono.Linker/Driver.cs
	  Mono.Linker/OutputStep.cs
	  Mono.Linker/ResolveFromAssemblyStep.cs
	  Mono.Linker/LinkContext.cs
	  Mono.Linker/BlacklistStep.cs
	  Mono.Linker/Pipeline.cs:
		Working on black list support.

	* Descriptors/corlib.xml
	  Descriptors/system.xml
	  Descriptors/system.web.xml:
		First audit of the core.

2007-04-23  Jb Evain  <jb@nurv.fr>

	* Mono.Linker/CleanStep.cs:
		Clean some special cases of MemberRef.

2007-03-19  Jb Evain  <jbevain@gmail.com>

	* Fix a bug when an assembly references two
	versions of an assembly with the same name.
	* do some refactorings

2007-03-16  Jb Evain  <jbevain@gmail.com>

	* rename linker.exe to monolinker.exe

2006-11-08  Jb Evain  <jbevain@gmail.com>

	* Mono.Linker/AssemblyMarker.cs:
		Fix a bug in method resolution.
	* Mono.Linker/Driver.cs:
		Fix a bug in assembly action processing.

2006-11-02  Jb Evain  <jbevain@gmail.com>

	* check-in patches adapted from contributions by:
		Alex Prudkiy <prudkiy@mail.ru>

2006-08-21  Jb Evain  <jbevain@gmail.com>

	* mark types used within the runtime

2006-08-20  Jb Evain  <jbevain@gmail.com>
