@@ -56,6 +56,7 @@ namespace Mono.Linker.Tests {
 		protected override Pipeline GetPipeline ()
 		{
 			Pipeline p = new Pipeline ();
+			p.AppendStep (new BlacklistStep ());
 			p.AppendStep (new MarkStep ());
 			p.AppendStep (new SweepStep ());
 			p.AppendStep (new CleanStep ());
